--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,14 @@
         "./*"
       ],
       "@pages/*": [
-       "./pages/*" 
+        "./pages/*"
       ]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts",
-    "nativewind-env.d.ts", "store/user/useUserLoadMoreStore",
+    "nativewind-env.d.ts",
+    "store/user/useUserLoadMoreStore"
   ]
 }
