--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@motify/core": "^0.18.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-native-firebase/app": "^22.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
@@ -32,11 +33,13 @@
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.5.0",
     "eventemitter3": "^5.0.1",
     "expo": "^53.0.5",
     "expo-application": "~6.1.4",
     "expo-blur": "~14.1.4",
     "expo-camera": "~16.1.6",
+    "expo-clipboard": "~7.1.4",
     "expo-constants": "~17.1.4",
     "expo-dev-client": "~5.1.7",
     "expo-device": "~7.1.4",
@@ -81,9 +84,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "yup": "^1.6.1",
-    "zustand": "^5.0.3",
-    "expo-clipboard": "~7.1.4",
-    "@react-native-community/netinfo": "11.4.1"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
