--- a/eas.json
+++ b/eas.json
@@ -12,7 +12,19 @@
       }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "AES_IV": "$AES_IV",
+        "AES_KEY": "$AES_KEY",
+        "API_ADMIN_URL": "$API_ADMIN_URL",
+        "API_DATA_URL": "$API_DATA_URL",
+        "KEY_TOKEN": "$KEY_TOKEN",
+        "TIMEZONE": "$TIMEZONE"
+      },
+      "android": {
+        "image": "ubuntu-22.04-jdk-17-ndk-25.2.9519653",
+        "buildType": "apk"
+      }
     },
     "production": {
       "autoIncrement": true,
