--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
       "web"
     ],
     "icon": "./assets/images/app-icon.png",
-    "scheme": "nestify_admin",
+    "scheme": "nestify-admin",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
