--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.1.1",
-    "@shopify/react-native-skia": "2.0.0-next.2",
+    "@shopify/react-native-skia": "v2.0.0-next.4",
     "@types/crypto-js": "^4.2.2",
     "@types/uuid": "^10.0.0",
     "ably": "^1.2.50",
@@ -35,7 +35,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
     "eventemitter3": "^5.0.1",
-    "expo": "^53.0.5",
+    "expo": "53.0.9",
     "expo-application": "~6.1.4",
     "expo-blur": "~14.1.4",
     "expo-camera": "~16.1.6",
@@ -67,19 +67,19 @@
     "react-dom": "19.0.0",
     "react-native": "^0.79.2",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-localize": "^3.4.1",
-    "react-native-maps": "1.18.0",
+    "react-native-maps": "1.20.1",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-ui-datepicker": "^3.0.2",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.12.5",
+    "react-native-webview": "13.13.5",
     "tailwind-colors": "^1.1.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
@@ -91,7 +91,6 @@
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.15",
     "@types/react": "~19.0.10",
-    "@types/react-native": "^0.73.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
