--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "**/*.ts",
     "**/*.tsx",
     "nativewind-env.d.ts",
-    "store/user/useUserLoadMoreStore"
+    "store/user/useUserLoadMoreStore",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts"
   ]
 }
