--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build:prod": "API_URL=https://api.production.com API_KEY=prod-api-key APP_ENV=production eas build --profile preview --platform android"
   },
   "jest": {
     "preset": "jest-expo"
